--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.0",
+    "react-sparklines": "^1.7.0",
     "react-toastify": "^11.0.5",
     "recharts": "^3.1.2"
   },
